# admin_front_ts

./: .dockerignore  .env.development  .env.production  .gitignore  AGENTS.md  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-admin-front.yml  deploy-frontend.yml.disabled
.playwright-cli/: page-2026-07-22T06-14-45-052Z.yml
.workflow/: master-pipeline.yml
deploy/: nginx.conf
docs/: rule.md
docs/acceptance/: p07-frontend-manual.md  p08-tauri-windows-manual.md  p08r-browser-only-manual.md
docs/accessibility/: manual-test-matrix.md
docs/deployment/: github-actions-scp.md
performance/: baseline.json  budgets.json
public/: update.json
scripts/: analyze-bundle.mjs  audit-test-architecture.mjs  check-admin-contract.mjs  check-browser-only.mjs  docker-frontend-gate.ps1  generate-admin-types.mjs  generate-locale-types.mjs  generate-view-registry.mjs  quality-checks.mjs  sync-admin-contract.mjs  test-migration-manifest.json  verify-docker-runtime.ps1  verify-frontend.ps1  verify-tauri.ps1
scripts/lib/: bundle-metadata.d.mts  bundle-metadata.mjs  generated-files.mjs
scripts/tests/: tauri-security-source.tests.ps1
src/: App.vue  main.ts  router.ts  style.css  vite-env.d.ts
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  cloudadmin.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  download.rs  error.rs  http_policy.rs  lib.rs  main.rs  notification.rs  process.rs  window.rs
src-tauri/src/download/: file.rs  http.rs  policy.rs  store.rs  tests.rs
src-tauri/tests/: credential_rotation.rs  credential_security.rs  managed_download.rs  security_boundary.rs
src/__tests__/: runtime-behavior.test.ts  type-check-actual.test.ts  type-safety-verification.test.ts  type-safety.test.ts
src/adapters/: native.ts
src/api/: tools.ts
src/app/: environment.ts  injection.ts  kernel.ts  state.ts
src/components/: CustomLoading.vue  CustomPagination.vue  IconSelect.vue  MenuItem.vue  RightClickMenu.vue  ShowImage.vue  UpImgIcon.vue  UpImgList.vue  UpVideo.vue  WangEditor.vue  largeImage.vue  largeVideo.vue
src/enums/: PayEnum.ts  index.ts
src/hooks/: useCopy.ts  useCrudTable.ts  useExportSubmit.ts  useNetworkStatus.ts  useNotify.ts  useResponsive.ts  useTable.ts  (+3 more)
tests/: realtime-websocket-url.test.ts
(+926 files in other folders)
