[package]
name = "cloudadmin"
version = "1.0.2"
description = "CloudAdmin Desktop"
authors = ["ZGM"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cloudadmin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = { version = "2.9.0", features = ["native-tls"] }
tauri-plugin-process = "2"
notify-rust = "4"
image = { version = "0.25.9", default-features = false, features = ["ico"] }

