[package]
name = "cloudadmin"
version = "1.0.7"
description = "CloudAdmin Desktop"
authors = ["ZGM"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cloudadmin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.10.2", features = ["tray-icon"] }
tauri-plugin-dialog = "=2.6.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri-plugin-updater = { version = "=2.10.0", features = ["native-tls"] }
tauri-plugin-process = "=2.3.1"
notify-rust = "=4.12.0"
image = { version = "=0.25.9", default-features = false, features = ["ico"] }
keyring = "=4.1.5"
url = "=2.5.8"
tempfile = "=3.27.0"
sha2 = "=0.11.0"
uuid = { version = "=1.23.5", features = ["v4"] }
thiserror = "=2.0.18"
secrecy = "=0.10.3"
zeroize = "=1.9.0"
ipnet = "=2.12.0"
reqwest = { version = "=0.12.28", features = ["json", "stream"] }
tokio = { version = "=1.49.0", features = ["full"] }
futures-util = "=0.3.31"

[dev-dependencies]
proptest = "=1.11.0"

